--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "JS-super-team",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://VDBabych.github.io/JS-super-team",
+  "homepage": "https://Daniel-Slavnyi.github.io/Filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /JS-super-team/"
+    "build": "parcel build src/*.html --public-url /Filmoteka/"
   },
   "repository": {
     "type": "git",
